# FinTool

./: .env.example  .gitignore  .pre-commit-config.yaml  IMPROVEMENTS.md  Makefile  README.md  TODO.md  __init__.py  cli.py  pyproject.toml  requirements.txt  setup.cfg  test_selective_stocks.py  test_table.html
.github/: copilot-instructions.md
adapters/: __init__.py  base.py  factory.py  tushare_adapter.py  yfinance_adapter.py
backtest/: __init__.py  backtest_types.py  backtester.py  metrics_calculator.py  performance_metrics.py  position_manager.py  report_generator.py  trade_manager.py
cleaner/: __init__.py  cleaner.py  data_validator.py  field_mapper.py  market_filter.py  unit_converter.py
config/: config.dev.yaml  config.example.yaml  parameters.yaml  schloss.strategy.example.json  strategies.yaml
core/: __init__.py  api_service.py  cache_manager.py  config_manager.py  database.py  output_formatter.py  scheduler.py
core/formatter/: __init__.py  exporters.py  helpers.py  main.py  models.py
core/scheduler/: __init__.py  cron_parser.py  main.py  models.py  storage.py  task_queue.py
docs/: env_config_guide.md  selective_stocks_guide.md
scorer/: __init__.py  ai_scorer.py  basic_scorer.py  risk_assessor.py
scorer/assessor/: __init__.py  calculator.py  main.py  models.py  reporter.py
strategies/: __init__.py  base_strategy.py  config_manager.py  formula_constants.py  formula_functions.py  formula_parser.py  formula_template_manager.py  formula_types.py  schloss_strategy.py  strategy_engine.py  strategy_executor.py  strategy_factory.py  strategy_registry.py  strategy_types.py
tests/: __init__.py
tushare/: ASYNC_README.md  async_requirements.txt  async_tushare.py  test_async.py  test_async_data_pro.py
tushare/fund/: async_nav.py
tushare/futures/: async_domestic.py
tushare/internet/: async_boxoffice.py
tushare/pro/: async_data_pro.py  client.py  llm.py
tushare/stock/: async_histroy_divide.py  async_rtq.py
tushare/trader/: trader.py
tushare/util/: common.py  netbase.py  verify_token.py
utils/: __init__.py  api_helper.py  cache_helper.py  data_analyzer.py  data_cleaner.py  data_loader.py  df_helper.py  env_config.py  expression_evaluator.py  expression_types.py  expression_validator.py  json_helper.py  logger.py  safe_evaluator.py  timer.py  validators.py
utils/api/: __init__.py  decorators.py  helper.py  models.py  rest_client.py  utils.py
utils/json/: __init__.py  config.py  convenience.py  dataframe.py  encoder.py  helper.py  json_lines.py
utils/validator/: __init__.py  core.py  helpers.py  models.py  presets.py
webapp/: __init__.py  app.py  models.py  server.py
webapp/routes/: __init__.py  backtest_routes.py  config_routes.py  data_routes.py  main_routes.py  stock_routes.py  strategy_routes.py
webapp/routes/stock/: data_routes.py  health_routes.py  info_routes.py  other_routes.py  strategy_routes.py
webapp/services/: stock_data_service.py
webapp/static/: manifest.json  sw.js  test_table.html
webapp/static/css/: main.css  material.css  strategy-extensions.css
webapp/static/css/modules/: base.css  cards.css  components.css  dark-theme.css  forms.css  navbar.css  responsive.css  tables.css
webapp/static/js/: README.md  main.js  material-app.js
webapp/static/js/modules/: api.js  app.js  backtest.js  config-manager.js  config.js  dashboard.js  stocks.js  strategies.js  utils.js
webapp/templates/: index.html  index_legacy.html
