[project]
name = "financial-agent"
version = "0.1.0"
description = "智能选股系统 - 跨市场价值投资策略分析工具"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "akshare>=1.17.42",
    "anthropic>=0.64.0",
    "black>=25.1.0",
    "bokeh>=3.7.3",
    "celery>=5.5.3",
    "click>=8.2.1",
    "colorama>=0.4.6",
    "configparser>=7.2.0",
    "deap>=1.4.3",
    "faker>=37.6.0",
    "fastapi>=0.116.1",
    "flake8>=7.3.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "freezegun>=1.5.5",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "jinja2>=3.1.6",
    "lightgbm>=4.6.0",
    "line-profiler>=5.0.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.5",
    "memory-profiler>=0.61.0",
    "mypy>=1.17.1",
    "numexpr>=2.11.0",
    "numpy>=2.3.2",
    "openai>=1.102.0",
    "optuna>=4.5.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pre-commit>=4.3.0",
    "psutil>=7.0.0",
    "pymongo>=4.14.1",
    "pysnowball>=0.1.5",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "schedule>=1.2.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.43",
    "sseclient-py>=1.8.0",
    "structlog>=25.4.0",
    "sympy>=1.14.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
    "watchdog>=6.0.0",
    "xgboost>=3.0.4",
    "yfinance>=0.2.65",
]
