# setup.cfg - 项目配置文件

[metadata]
name = financial-agent
version = 0.1.0
author = FinancialAgent Team
author_email = team@financialagent.com
description = 智能选股系统 - 跨市场价值投资策略分析工具
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/financial-agent
project_urls =
    Bug Tracker = https://github.com/yourusername/financial-agent/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Financial and Insurance Industry
    Topic :: Office/Business :: Financial :: Investment

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=2.0.0
    numpy>=1.24.0
    pyyaml>=6.0
    loguru>=0.7.0
    requests>=2.31.0

[options.packages.find]
where = .

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    black>=23.0.0
    flake8>=6.0.0
    isort>=5.12.0
    mypy>=1.4.0
    pre-commit>=3.3.0

[options.entry_points]
console_scripts =
    financial-agent = cli:main
    fa = cli:main

# Flake8 配置
[flake8]
max-line-length = 88
extend-ignore = E203, E266, E501, W503, F403, F401
max-complexity = 10
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    .venv,
    venv,
    .env

# MyPy 配置
[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True

# 忽略特定模块的类型检查
[mypy-pandas.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-tushare.*]
ignore_missing_imports = True

[mypy-yfinance.*]
ignore_missing_imports = True

[mypy-akshare.*]
ignore_missing_imports = True

# 测试配置
[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    --strict-markers
    --strict-config
    --verbose
    --cov=.
    --cov-report=term-missing
    --cov-report=html:htmlcov
    --cov-report=xml
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    unit: marks tests as unit tests
